--- a/.github/workflows/maven-release.yml
+++ b/.github/workflows/maven-release.yml
@@ -33,7 +33,7 @@ jobs:
     - name: 📤 Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: MySpawn-Jar-${{ github.ref_name }}
+        name: NexusInventories-Jar-${{ github.ref_name }}
         path: target/*.jar
         retention-days: 90
 
@@ -73,7 +73,9 @@ jobs:
       if: startsWith(github.ref, 'refs/tags/')
       with:
         name: ${{ steps.changelog.outputs.title }}
-        files: target/*.jar
+        files: |
+          target/*.jar
+          !target/original-*.jar
         generate_release_notes: false
         body: |
           ${{ steps.changelog.outputs.CHANGELOG }}
