refactor: Renamed main class package, groupId and sync to 1.2-SNAPSHOT

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: NexusInventories
 version: ${project.version}
-main: com.theangel256.nexusinventories.Main
+main: theangel256.nexusinventories.Main
 api-version: 1.20
 authors: [Theangel256]
 description: A scalable GUI framework.
